[package]
name = "loadgen-ffi"
version = "0.2.0"
edition = "2024"
description = "C ABI wrapper for loadgen-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
loadgen-rs = { path = "../.." }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "http2", "http3"] }
tokio = { version = "1", features = ["rt", "time"] }
